<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/phone"
        android:icon="@drawable/videoplayer"
        android:title="@string/phone"
        myapp:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/computer"
        android:icon="@drawable/gallery"
        android:title="@string/computer"
        myapp:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/camera"
        android:icon="@drawable/camera_i"
        android:title="@string/camera"
        myapp:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/video"
        android:icon="@drawable/video"
        android:title="@string/video"
        myapp:showAsAction="collapseActionView"/>

</menu>