<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E1E1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="5dp"
        android:background="#ffffff"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/settings_pwd_edit_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/settings_currentpassword"
            android:inputType="textPassword"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/settings_pwd_edit_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/settings_newpassword"
            android:inputType="textPassword"
            android:textColor="#000000" />

        <requestFocus />

        <EditText
            android:id="@+id/settings_pwd_edit_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/settings_confirmpassword"
            android:inputType="textPassword"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="25dp"
            android:gravity="center" >

            <Button
                android:id="@+id/settings_pwd_button_save"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:text="@string/settings_save"
                android:textColor="@android:color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/settings_pwd_button_cancel"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/round_button_grey"
                android:text="@string/settings_cancel"
                android:textColor="@android:color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>