<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E1E1"
    android:gravity="top|center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/settings_language_rgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked" >

                <RadioButton
                    android:id="@+id/settings_language_rbutton_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_english"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/settings_language_rbutton_kannada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_kannada"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/settings_language_rbutton_hindi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_hindi"
                    android:textSize="17sp" />
            </RadioGroup>

            <Button
                android:id="@+id/settings_language_button_cancel"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_button"
                android:text="@string/settings_cancel"
                android:textColor="@android:color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>